--- a/templates/bmstandard/pnda.yaml.j2
+++ b/templates/bmstandard/pnda.yaml.j2
@@ -62,8 +62,10 @@ parameters:
     type: string
   signal_transport:
     type: string
+    default: TEMP_URL_SIGNAL
   software_config_transport:
     type: string
+    default: POLL_TEMP_URL
 
 resources:
   pnda_cluster:
